# Mod-I

./: CMakeLists.txt  Main.cpp  framework.h  pch.h
DX11/: D3D11Hook.cpp
GameAPI/: GameAPI.h
GameAPI/CashInstance/: CashInstance.cpp  CashInstance.h
GameAPI/Customer/: Customer.cpp  Customer.h
GameAPI/InstanceFinder/: Instance.h
GameAPI/MoneyManager/: MoneyManager.cpp
GameAPI/NetworkManager/: NetworkManager.cpp
GameAPI/Player/: Player.cpp  Player.h
GameAPI/PlayerInventory/: PlayerInventory.cpp  PlayerInventory.h
Hooks/: BlackjackInterface.cpp  BlackjackInterface.h  Cuke.cpp  Cuke.h  Hook.cpp  Hook.h  MoneyManager.cpp  MoneyManager.h  Player.cpp  Player.h  PlayerInventory.cpp  PlayerInventory.h  PursuitBehaviour.cpp  PursuitBehaviour.h  TimeManager.cpp  TimeManager.h  TrashGrabber.cpp  TrashGrabber.h
Injector/: CMakeLists.txt
Injector/src/: injector_main.cpp
Kiero/: kiero.cpp  kiero.h
Menu/: Menu.cpp  Menu.h
Resolver/: Data.hpp  IL2CPP_Resolver.hpp
Resolver/Unity/API/: Camera.hpp  Component.hpp  Object.hpp  Rigidbody.hpp
Source/: Main.cpp
Source/DX11/: D3D11Hook.cpp  D3D11Hook.h
Source/GameAPI/InstanceFinder/: Instance.cpp
Source/GameAPI/MoneyManager/: MoneyManager.h
Source/GameAPI/NetworkManager/: NetworkManager.h
Source/Hooks/: Hook.cpp  Hook.h  MoneyManager.cpp  MoneyManager.h  Player.h  TimeManager.cpp
Source/Menu/: Menu.cpp
Source/Resolver/API/: Callback.hpp  Class.hpp  String.hpp  Thread.hpp
Source/Resolver/Unity/API/: GameObject.hpp  LayerMask.hpp  Transform.hpp
Source/Resolver/Utils/: Helper.hpp  VTable.hpp
Source/Util/: Globals.h  Memory.cpp  game_thread.cpp  game_thread.h
Util/: Globals.h  HookHelper.cpp  HookHelper.h  Memory.cpp  Memory.h  Unity.cpp  Unity.h  game_thread.cpp  game_thread.h  il2cpp.h
